Add SymPy's subscriptions

--- a/planet.ini
+++ b/planet.ini
@@ -22,14 +22,62 @@ log_level       = DEBUG
 
 # Subscription configuration
 
-[http://debaday.debian.net/feed/atom/]
-name = Debian Package of the Day
+[http://straightupcoding.blogspot.com/feeds/posts/default/-/SymPy]
+name = Brian Jorgensen
 
-[http://www.debian-administration.org/atom.xml]
-name = Debian Administration
+[http://lasympy.blogspot.com/feeds/posts/default]
+name = Chris Wu
 
-[http://times.debian.net/?format=rss20.xml]
-name = Debian Times
+[http://dsympy.blogspot.com/feeds/posts/default]
+name = Django-SymPy
 
-[http://blog.debconf.org/blog/index.rss11]
-name = DebConf Organisers Blog
+[http://fseoane.net/blog/wp-rss2.php?cat=3]
+name = Fabian Pedregosa
+
+[http://fredrik-j.blogspot.com/feeds/posts/default/-/sympy]
+name = Fredrik Johansson
+
+#[http://gedgedev.blogspot.com/feeds/posts/default]
+#name = Jason Gedge
+
+#[http://concrete-math.blogspot.com/feeds/posts/default]
+#name = Mateusz Paprocki
+
+[http://sympy.blogspot.com/feeds/posts/default]
+name = Official SymPy blog
+
+[http://ondrejcertik.blogspot.com/feeds/posts/default/-/sympy]
+name = Ond&#345;ej &#268;ert&iacute;k
+
+[http://robert-code.blogspot.com/feeds/posts/default]
+name = Robert Schwarz
+
+#[http://blog.sarojadhikari.com/feeds/posts/default/-/sympy]
+#name = Saroj Adhikari
+
+#[http://plaes.org/blog/tags/sympy/feed.atom]
+#name = Priit Laes
+
+[http://gsoc-mathtex.blogspot.com/feeds/posts/default]
+name = Freddie Witherden
+
+[http://asmeurersympy.wordpress.com/feed/]
+name = Aaron Meurer
+
+[http://dlpeterson.com/blog/?feed=rss2]
+name = Dale Peterson
+
+[http://haz-tech.blogspot.com/feeds/posts/default/-/sympy]
+name = Christian Muise
+
+[http://mattjcurry.blogspot.com/feeds/posts/default]
+name = Matthew Curry
+
+[http://addisoncugini.blogspot.com/feeds/posts/default]
+name = Addison Cugini
+
+[http://sympy-patterns.blogspot.com/feeds/posts/default]
+name = Kazuo Thow
+
+[http://ojensen.wordpress.com/feed/]
+name = Øyvind Jensen
