--- a/theme/config.ini
+++ b/theme/config.ini
@@ -16,5 +16,5 @@ template_directories:
 bill_of_materials:
   planet.css
   images/feed-icon-10x10.png
-  images/logo.png
   images/planet.png
+  images/sympy-100px.png
