Update contact information in planet.ini

--- a/planet.ini
+++ b/planet.ini
@@ -9,10 +9,10 @@
 
 [Planet]
 
-name            = Planet Example
-link            = http://planet.example.org/
-owner_name      = Debian User
-owner_email     = nobody@localhost
+name            = Planet SymPy
+link            = http://planet.sympy.org/
+owner_name      = Ondrej Certik
+owner_email     = ondrej@certik.cz
 output_theme    = theme
 cache_directory = cache
 output_dir      = output
