Add Jeremias, Vlada and Tom's feed

--- a/planet.ini
+++ b/planet.ini
@@ -81,3 +81,12 @@ name = Kazuo Thow
 
 [http://ojensen.wordpress.com/feed/]
 name = Øyvind Jensen
+
+[http://f1728.wordpress.com/category/SymPy/feed/]
+name = Jeremias Yehdegho
+
+[http://www.vperic.blogspot.com/feeds/posts/default/-/SymPy]
+name = Vlada Peric
+
+[http://nessgrh.wordpress.com/feed/]
+name = Tom Bachmann
