--- a/planet.ini
+++ b/planet.ini
@@ -90,3 +90,6 @@ name = Vlada Peric
 
 [http://nessgrh.wordpress.com/feed/]
 name = Tom Bachmann
+
+[http://seanvig.blogspot.com/feeds/posts/default/-/sympy]
+name = Sean Vig
