Added 4 more students

--- a/planet.ini
+++ b/planet.ini
@@ -86,10 +86,22 @@ name = Øyvind Jensen
 name = Jeremias Yehdegho
 
 [http://www.vperic.blogspot.com/feeds/posts/default/-/SymPy]
-name = Vlada Peric
+name = Vladimir Peric
 
 [http://nessgrh.wordpress.com/feed/]
 name = Tom Bachmann
 
 [http://seanvig.blogspot.com/feeds/posts/default/-/sympy]
 name = Sean Vig
+
+[http://gilbertgede.wordpress.com/feed/]
+name = Gilbert Gede
+
+[http://lazovichsympy.wordpress.com/feed/]
+name = Tomo Lazovich
+
+[http://sherjilozair.wordpress.com/feed/]
+name = Sherjil Ozair
+
+[http://sympystats.wordpress.com/feed/]
+name = Matthew Rocklin
