Update my name to be spelled with diacritic.

--- a/planet.ini
+++ b/planet.ini
@@ -86,7 +86,7 @@ name = Øyvind Jensen
 name = Jeremias Yehdegho
 
 [http://www.vperic.blogspot.com/feeds/posts/default/-/SymPy]
-name = Vladimir Peric
+name = Vladimir Perić
 
 [http://nessgrh.wordpress.com/feed/]
 name = Tom Bachmann
