Fix accents in my name
Instead of using some old HTML way of doing accents, simply use unicode instead.

--- a/planet.ini
+++ b/planet.ini
@@ -47,7 +47,7 @@ name = Fredrik Johansson
 name = Official SymPy blog
 
 [http://ondrejcertik.blogspot.com/feeds/posts/default/-/sympy]
-name = Ond&#345;ej &#268;ert&iacute;k
+name = Ondřej Čertík
 
 [http://robert-code.blogspot.com/feeds/posts/default]
 name = Robert Schwarz
