Add Saptarshi's blog

--- a/planet.ini
+++ b/planet.ini
@@ -107,3 +107,6 @@ name = Sherjil Ozair
 
 [http://sympystats.wordpress.com/feed/]
 name = Matthew Rocklin
+
+[http://saptman.wordpress.com/feed/]
+name = Saptarshi Mandal
