Add David Joyner to the subscriptions (hopefully correctly)

--- a/planet.ini
+++ b/planet.ini
@@ -110,3 +110,6 @@ name = Matthew Rocklin
 
 [http://saptman.wordpress.com/feed/]
 name = Saptarshi Mandal
+
+[http://wdjoyner.wordpress.com/feed/]
+name = David Joyner
