Add Sergiu Ivanov to the planet.ini file

--- a/planet.ini
+++ b/planet.ini
@@ -113,3 +113,6 @@ name = Saptarshi Mandal
 
 [http://wdjoyner.wordpress.com/category/sympy/feed/]
 name = David Joyner
+
+[http://scolobb.wordpress.com/feed/]
+name = Sergiu Ivanov
