Add Angadh Nanjangud's blog to the planet.ini file

--- a/planet.ini
+++ b/planet.ini
@@ -116,3 +116,6 @@ name = David Joyner
 
 [http://scolobb.wordpress.com/feed/]
 name = Sergiu Ivanov
+
+[http://angadhsympy.wordpress.com/feed/]
+name = Angadh Nanjangud
