Add Bharath M R's blog

--- a/planet.ini
+++ b/planet.ini
@@ -119,3 +119,6 @@ name = Sergiu Ivanov
 
 [http://angadhsympy.wordpress.com/feed/]
 name = Angadh Nanjangud
+
+[http://catchmrbharath.github.com/programming.xml]
+name = Bharath M R
